--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "dotenv": "^16.0.3",
     "expo": "~48.0.15",
+    "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.21.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
